name:                MRG32K3A
version:             0.0.1.0
synopsis:            Test implementation of MRG32k3a pseudo-random number generator with skip-ahead
-- description:         
homepage:            https://github.com/mkoerner/MRG32K3A
license:             BSD3
license-file:        LICENSE
author:              Mathias Koerner <mkoerner@gmail.com>
maintainer:          Mathias Koerner <mkoerner@gmail.com>
copyright:           2015 Mathias Koerner
category:            Math, Statistics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    System.Random.MRG32K3A.Simple
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.7 && <4.8, 
    matrix >=0.3 && <0.4
  ghc-options: -Wall
  -- hs-source-dirs:      
  default-language:    Haskell2010

